Postgres initial commit

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -319,6 +319,17 @@ mantis {
     gas-tie-breaker = false
   }
 
+  postgres {
+    dataSourceClassName = org.postgresql.ds.PGSimpleDataSource
+    dataSource.user = postgres
+    dataSource.password = mysecretpassword
+    dataSource.databaseName = etc
+    dataSource.portNumber = 5432
+    dataSource.serverName = localhost
+    connectionTimeout = 30000
+  }
+
+
   sync {
     # Whether to enable fast-sync
     do-fast-sync = true
