--- a/src/universal/conf/mantis.conf
+++ b/src/universal/conf/mantis.conf
@@ -16,7 +16,7 @@ include "misc.conf"
 
 # Uncomment the following include to connect to the Ethereum Hard-Fork network.
 # Note that any settings in this file will override the ones defined in the files above
-# include "ethereumHF.conf"
+include "ethereumHF.conf"
 
 # Uncomment the following include to connect to the testnet Morden.
 # Note that any settings in this file will override the ones defined in the files above
